JPS: compilation server configuration UI